JENKINS-63556 Fix contrast issues (#104)

--- a/ui/src/main/js/view/templates/stage-logs.less
+++ b/ui/src/main/js/view/templates/stage-logs.less
@@ -57,6 +57,7 @@
   .node-log-frame.FAILED {
     .node-name {
       background-color: #f29d9d;
+      background-color: var(--pipeline-stage-view-failed-bg-color, #f29d9d);
     }
   }
 
