--- a/ui/src/main/js/view/widgets/dialog/style.less
+++ b/ui/src/main/js/view/widgets/dialog/style.less
@@ -5,6 +5,13 @@
   background-color: @light-body-background-color;
   background-color: var(--background);
   box-shadow:rgba(0,0,0,.25) 0 0 0 999em, rgba(0,0,0,.25) 0 0 0 1px, rgba(0,0,0,.33) 0 3px 10px;
+  color: #fff;
+  color: var(--bigtable-header-text-color);
+
+  a {
+    color: #fff;
+    color: var(--bigtable-header-text-color);
+  }
 
   .header {
     border-radius-topleft: @cbwf-border-radius;
